--- a/ChatApp.UnitTests/packages.config
+++ b/ChatApp.UnitTests/packages.config
@@ -6,10 +6,13 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="2.0.0-beta2" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="2.0.0-beta2" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.23.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
